--- a/css3_playground.css
+++ b/css3_playground.css
@@ -1,22 +1,151 @@
-#color_change_div {
+.demo_div {
+    border:2px solid;
+    border-radius:25px;
     width:100px;
     height:100px;
-    background:red;
-    animation:red_to_yellow 10s;
-    -webkit-animation:red_to_yellow 10s; /* Safari and Chrome */   
+    text-align:center;
+    line-height:100px;    
 }
 
 
-@keyframes red_to_yellow
-{
+#color_change_div {
+    background:red;
+    animation:red_to_yellow 5s;
+    animation-iteration-count: infinite;
+    -webkit-animation:red_to_yellow 5s; /* Safari and Chrome */   
+}
+
+
+@keyframes red_to_yellow {
 from {background:red;}
 to {background:yellow;}
 }
 
-@-webkit-keyframes red_to_yellow /* Safari and Chrome */
-{
+/* Safari and Chrome */
+@-webkit-keyframes red_to_yellow {
 from {background:red;}
 to {background:yellow;}
 }
 
 /****End color change*****/
+
+#color_change_div_with_procent {
+    background:red;
+    animation:color_shift 5s;
+    animation-iteration-count: infinite;
+    -webkit-animation:color_shift 5s; /* Safari and Chrome */   
+}
+
+
+@keyframes color_shift {
+0%   {background:red;}
+25%  {background:yellow;}
+50%  {background:blue;}
+100% {background:green;}
+}
+
+/* Safari and Chrome */
+@-webkit-keyframes color_shift {
+0%   {background:red;}
+25%  {background:yellow;}
+50%  {background:blue;}
+100% {background:green;}
+}
+
+/****End color change*****/
+
+/****End color change*****/
+
+
+#fade_in_div {
+    opacity:0;
+    animation:invisible_to_visible 5s;
+    animation-iteration-count: infinite;
+    -webkit-animation:invisible_to_visible 5s; /* Safari and Chrome */   
+}
+
+
+@keyframes invisible_to_visible {
+from {opacity:0;}
+to {opacity:1.0;}
+}
+
+/* Safari and Chrome */
+@-webkit-keyframes invisible_to_visible {
+from {opacity:0;}
+to {opacity:1.0;}
+}
+
+/*  end fade in  */
+
+#fade_out_div {
+    opacity:1.0;
+    animation:visible_to_invisible 5s;
+    animation-iteration-count: infinite;
+    -webkit-animation:visible_to_invisible 5s; /* Safari and Chrome */   
+}
+
+
+@keyframes visible_to_invisible {
+from {opacity:1.0;}
+to {opacity:0;}
+}
+
+/* Safari and Chrome */
+@-webkit-keyframes visible_to_invisible {
+from {opacity:1.0;}
+to {opacity:0;}
+}
+
+/*end fade out*/
+
+
+.with_box_shadow {
+    box-shadow: 10px 10px 5px #888888;  
+}
+
+/* end box shadow*/
+
+.moving_around {
+position:relative;
+animation:moving_around_animation 5s infinite;
+-webkit-animation:moving_around_animation 5s infinite; /* Safari and Chrome */    
+}
+
+@keyframes moving_around_animation{
+0%   {left:0px; top:0px;}
+25%  {left:100px; top:0px;}
+50%  {left:100px; top:100px;}
+75%  {left:0px; top:100px;}
+100% {left:0px; top:0px;}
+}
+
+/* Safari and Chrome */
+@-webkit-keyframes moving_around_animation {
+0%   {left:0px; top:0px;}
+25%  {left:100px; top:0px;}
+50%  {left:100px; top:100px;}
+75%  {left:0px; top:100px;}
+100% {left:0px; top:0px;}
+}
+
+
+/*end moving around*/
+
+.scroll_text {
+position:relative;
+animation:scroll_text_animation 2s infinite;
+animation-timing-function:linear;
+-webkit-animation:scroll_text_animation 5s infinite; /* Safari and Chrome */    
+}
+
+@keyframes scroll_text_animation{
+0% {left:200px; top:0px;}
+100%   {left:-150px; top:0px;}
+}
+
+/* Safari and Chrome */
+@-webkit-keyframes scroll_text_animation {
+0% {left:200px; top:0px;}
+100%   {left:0px; top:0px;}
+}
