--- a/css3_playground.css
+++ b/css3_playground.css
@@ -214,13 +214,9 @@ text-shadow: 2px 2px #888888;
 
 
 .rotate {
-    
+    opacity:0.1;
     /* Firefox */
     -moz-transition: all 5s ease;
-    /* WebKit */
-    -webkit-transition: all 5s ease;
-    /* Opera */
-    -o-transition: all 5s ease;
     /* Standard */
     transition: all 5s ease;
     
@@ -229,12 +225,8 @@ text-shadow: 2px 2px #888888;
 .rotate:active {
     opacity: 1;
     /* Firefox */
-    -moz-transform: rotate(360deg);
-    /* WebKit */
-    -webkit-transform: rotate(360deg);
-    /* Opera */
-    -o-transform: rotate(360deg);
+    -moz-transform: scale(2) rotate(359deg);
     /* Standard */
-    transform: rotate(360deg);
+    transform: scale(2) rotate(359deg);
     z-index: 1000;
 }
