--- a/css3_playground.css
+++ b/css3_playground.css
@@ -228,6 +228,7 @@ text-shadow: 2px 2px #888888;
     -moz-transform: scale(2) rotate(359deg);
     /* Standard */
     transform: scale(2) rotate(359deg);
+    -webkit-transform: scale(2) rotate(359deg);
     z-index: 1000;
 }
 
@@ -252,16 +253,19 @@ text-shadow: 2px 2px #888888;
 }
 #card_container:active #card {
   transform: rotateY(180deg);
+  -webkit-transform:rotateY(180deg);
 }
 .face {
   position: absolute;
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
+  -webkit-backface-visibility:hidden;
   
 }
 .face.back { 
   transform: rotateY(180deg);
+  -webkit-transform:rotateY(180deg);
 }
 
 
@@ -295,16 +299,19 @@ text-shadow: 2px 2px #888888;
 }
 .click_card_back #click_card {
   transform: rotateY(180deg);
+  -webkit-transform:rotateY(180deg);
 }
 .face {
   position: absolute;
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
+  -webkit-backface-visibility:hidden;
   
 }
 .face.back { 
   transform: rotateY(180deg);
+  -webkit-transform:rotateY(180deg);
 }
 
 
@@ -314,14 +321,18 @@ text-shadow: 2px 2px #888888;
 
 .cube_wrap {
 	perspective: 800px;
+        -webkit-perspective: 800px;
 	perspective-origin: 50% 100px;
+        -webkit-perspective-origin: 50% 100px;
 }
 
 .cube {
 	position: relative;
 	width: 100px;
 	transform-style: preserve-3d;
+        -webkit-transform-style: preserve-3d;
         animation: spin 5s infinite linear;
+        -webkit-animation:spin 5s infinite linear; 
 }
 
 .cube div {
@@ -336,25 +347,35 @@ text-shadow: 2px 2px #888888;
 
 .cube_back {
 	transform: translateZ(-50px) rotateY(180deg);
+        -webkit-transform:translateZ(-50px) rotateY(180deg);
 }
 .cube_right {
 	transform: rotateY(-270deg) translateX(50px);
+        -webkit-transform: rotateY(-270deg) translateX(50px);
 	transform-origin: top right;
+        -webkit-transform-origin:top right; 
 }
 .cube_left {
 	transform: rotateY(270deg) translateX(-50px);
+        -webkit-transform:rotateY(270deg) translateX(-50px);
 	transform-origin: center left;
+        -webkit-transform-origin:center left;
 }
 .cube_top {
 	transform: rotateX(-90deg) translateY(-50px);
+        -webkit-transform:rotateX(-90deg) translateY(-50px);
 	transform-origin: top center;
+        -webkit-transform-origin:top center;
 }
 .cube_bottom {
 	transform: rotateX(90deg) translateY(50px);
+        -webkit-transform:rotateX(90deg) translateY(50px);
 	transform-origin: bottom center;
+        -webkit-transform-origin: bottom center;
 }
 .cube_front {
 	transform: translateZ(50px);
+        -webkit-transform:translateZ(50px);
 }
 
 @keyframes spin {
@@ -362,11 +383,18 @@ text-shadow: 2px 2px #888888;
 	to { transform: rotateY(360deg); }
 }
 
+@-webkit-keyframes spin {
+	from { -webkit-transform: rotateY(0); }
+	to { -webkit-transform: rotateY(360deg); }
+}
+
 
 .cube2 {
 	position: relative;
 	width: 100px;
 	transform-style: preserve-3d;
+        -webkit-transform-style: preserve-3d;
+        -webkit-animation: spin2 5s infinite linear;
         animation: spin2 5s infinite linear;
 }
 
@@ -386,6 +414,11 @@ text-shadow: 2px 2px #888888;
 }
 
 
+@-webkit-keyframes spin2 {
+	from { -webkit-transform: rotateY(0) rotateX(0deg); }
+	to { -webkit-transform: rotateY(360deg) rotateX(360deg); }
+}
+
 
 
 /* end rotate and fade */
@@ -394,14 +427,16 @@ text-shadow: 2px 2px #888888;
 
 #rotate_and_fade_wrap {
 	perspective: 800px;
+        -webkit-perspective: 800px;
 	perspective-origin: 50% 50px;
+        -webkit-perspective-origin: 50% 50px;
 }
 
 #rotate_and_fade {
 	position: relative;
 	width: 100px;
 	transform-style: preserve-3d;
- 
+        -webkit-transform-style: preserve-3d;
 }
 
 #rotate_and_fade div {
@@ -414,28 +449,35 @@ text-shadow: 2px 2px #888888;
         margin:0px;
         transform-style: preserve-3d;
         transition: all 1.0s linear;
+        -webkit-transform-style: preserve-3d;
+        -webkit-transition: all 1.0s linear;
 }
 
 .rotate_and_fade_invisible {
         opacity : 0;
         transform: rotateY(-120deg) translateX(200px) translateZ(-220px);
+        -webkit-transform: rotateY(-120deg) translateX(200px) translateZ(-220px);
 }
 
 .rotate_and_fade_disappear {
         transform:  rotateY(120deg) translateX(-200px) translateZ(-220px);
+        -webkit-transform:  rotateY(120deg) translateX(-200px) translateZ(-220px);
         opacity : 0;
 }
 
 .rotate_and_fade_previous {
 	transform: rotateY(60deg) translateX(-200px);
+        -webkit-transform: rotateY(60deg) translateX(-200px);
         opacity : 0.3;
 }
 .rotate_and_fade_current {
 	transform: rotateY(0deg);
+        -webkit-transform: rotateY(0deg);
         opacity : 1;
 }
 .rotate_and_fade_next {
 	transform: rotateY(-60deg)  translateX(200px);
+        -webkit-transform: rotateY(-60deg)  translateX(200px);
         opacity : 0.3;
 }
 
